# rib

./: .gitignore  Cargo.toml  README.md  config.ron  world  world.txt
resources/: player.aseprite
src/: config.rs  draw_sections.rs  load_world.rs  main.rs  player.rs  tile.rs  update_sections.rs  world.rs
