[package]
name = "rib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = "3.7.0"
gilrs = "0.9.0"
ron = "0.8"
serde = "1.0"
simplelog = "0.12.0"
log = "0.4.0"
rand = "0.8"
puffin = "0.13.3"
puffin_http = "0.10.1"